tests/snapshots/files__four_call_nestings-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@one {
  v0_: int = const 3;
  print v0_;
}
@two {
  v0_: int = const 3;
  print v0_;
}
@three {
  v0_: int = const 3;
  print v0_;
}
@main {
  call @three;
}
