tests/snapshots/files__gamma_condition_and-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="int"];
v2 [label="lt"];
v3 [label="int"];
v4 [label="lt"];
v5 [label="and"];
v6 [label="arg 0"];
v7 [label="PRINT"];
v8 [label="arg 0"];
v9 [label="PRINT"];
v10 [label="Φ"];
v11 [label="Φ"];
v12 [label="PRINT"];
v2 -> v0;
v2 -> v1;
v4 -> v1;
v4 -> v3;
v5 -> v2;
v5 -> v4;
v7 -> v0;
v7 -> v6;
v9 -> v1;
v9 -> v8;
v10 -> v5;
v10 -> v7;
v10 -> v9;
v11 -> v5;
v11 -> v3;
v11 -> v3;
v12 -> v11;
v12 -> v10;
}
}

