tests/snapshots/files__gamma_condition_and-rvsdg.snap
---
source: tests/files.rs
expression: visualization.result
---
<svg
	height="1050"
	version="1.1"
	width="1625"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="1050"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="1625">
		</rect>
		<g>
			<path
				d="M 812.5 0V 15Q 812.5 25 822.5 25H 1098.3334Q 1108.3334 25 1108.3334 35V 500"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 172.5Q 100 182.5 110 182.5H 523.3333Q 533.3333 182.5 533.3333 192.5V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 172.5Q 100 182.5 110 182.5H 1256.6666Q 1266.6666 182.5 1266.6666 192.5V 500"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 250 150V 165Q 250 175 260 175H 556.6667Q 566.6667 175 566.6667 185V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 250 150V 165Q 250 175 260 175H 673.3333Q 683.3333 175 683.3333 185V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 250 150V 165Q 250 175 260 175H 1335.8333Q 1345.8333 175 1345.8333 185V 500"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 400 150V 157.5Q 400 167.5 410 167.5H 706.6667Q 716.6667 167.5 716.6667 177.5V 200"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 400 150V 157.5Q 400 167.5 410 167.5H 1177.5Q 1187.5 167.5 1187.5 177.5V 500"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 550 300V 320Q 550 330 560 330H 823.3333Q 833.3333 330 833.3333 340V 350"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 700 300V 310Q 700 320 710 320H 856.6667Q 866.6667 320 866.6667 330V 350"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 850 450V 465Q 850 475 860 475H 1019.1666Q 1029.1666 475 1029.1666 485V 500"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1108.3334 850V 860Q 1108.3334 870 1118.3334 870H 1531.6666Q 1541.6666 870 1541.6666 880V 900"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1266.6666 850V 870Q 1266.6666 880 1276.6666 880H 1498.3334Q 1508.3334 880 1508.3334 890V 900"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 1525 1000V 1015Q 1525 1025 1515 1025H 822.5Q 812.5 1025 812.5 1035V 1050"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						1
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						2
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(350, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						3
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(500, 200)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						lt
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(650, 200)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						lt
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(800, 350)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						and
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(950, 500)">
				<rect
					fill="#80FF80"
					height="350"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="475">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					match
				</text>
				<g>
					<g
						transform="translate(25, 125)">
						<rect
							fill="white"
							height="200"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="200">
						</rect>
						<g>
							<path
								d="M 40 0V 6Q 40 16 50 16H 106.666664Q 116.666664 16 116.666664 26V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 80 0V 170Q 80 180 90 180H 123.33333Q 133.33333 180 133.33333 190V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 160 0V 24Q 160 34 150 34H 93.33333Q 83.33333 34 83.33333 44V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 160Q 100 170 90 170H 76.666664Q 66.666664 170 66.666664 180V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										PRINT
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="40"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="80"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="120"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="160"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="66.666664"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="133.33333"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="125"
						y="100">
						0
					</text>
				</g>
				<g>
					<g
						transform="translate(250, 125)">
						<rect
							fill="white"
							height="200"
							rx="10"
							stroke="black"
							stroke-width="2"
							width="200">
						</rect>
						<g>
							<path
								d="M 40 0V 6Q 40 16 50 16H 106.666664Q 116.666664 16 116.666664 26V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 80 0V 170Q 80 180 90 180H 123.33333Q 133.33333 180 133.33333 190V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 120 0V 18Q 120 28 110 28H 93.33333Q 83.33333 28 83.33333 38V 50"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
							<path
								d="M 100 150V 160Q 100 170 90 170H 76.666664Q 66.666664 170 66.666664 180V 200"
								fill="transparent"
								stroke="black"
								stroke-linecap="round"
								stroke-width="2">
							</path>
						</g>
						<g>
							<g
								transform="translate(50, 50)">
								<g>
									<rect
										fill="#FFFF80"
										height="100"
										rx="10"
										stroke="black"
										stroke-width="2"
										width="100">
									</rect>
									<text
										fill="black"
										font-size="50"
										text-anchor="middle"
										x="50"
										y="62.5">
										PRINT
									</text>
								</g>
								<circle
									cx="33.333332"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="66.666664"
									cy="0"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
								<circle
									cx="50"
									cy="100"
									fill="white"
									r="4"
									stroke="black"
									stroke-width="2">
								</circle>
							</g>
						</g>
						<g>
							<circle
								cx="40"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="80"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="120"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="160"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g>
							<circle
								cx="66.666664"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="133.33333"
								cy="200"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="350"
						y="100">
						1
					</text>
				</g>
				<circle
					cx="79.166664"
					cy="0"
					fill="black"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="158.33333"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="237.5"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="316.66666"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="395.8333"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="158.33333"
					cy="350"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="316.66666"
					cy="350"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(1475, 900)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						PRINT
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="812.5"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="812.5"
				cy="1050"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

