tests/snapshots/files__gamma_pull_in-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 10;
  v2_: bool = lt v0 c1_;
  c3_: int = const 3;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  c7_: int = const 2;
  v4_: int = id c7_;
  v8_: int = add v4_ v4_;
  print v8_;
  ret;
  jmp .b9_;
.b6_:
  v8_: int = add v4_ v4_;
  print v8_;
  ret;
.b9_:
}
