tests/snapshots/files__gamma_pull_in-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 block:
  block:
   ten: int = const 10;
   cond: bool = lt input ten;
   if cond:
    break 2
   else:
    break 1
  x: int = const 3;
  break 1
 x: int = const 2;
block:
 y: int = add x x;
 print y;
block:

 return

}
