tests/snapshots/files__if_constant_fold-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 6;
  c2_: int = const 3;
  print c2_;
  print c1_;
  ret;
}
