tests/snapshots/files__if_constant_fold-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v2: int = const 6;
  v4: int = const 3;
  print v4;
  print v2;
}
